Integrate API DELIVERY of GHNExpress

--- a/ecommerceou/src/main/resources/application.properties
+++ b/ecommerceou/src/main/resources/application.properties
@@ -66,7 +66,11 @@ momo.partnerCode = MOMOQVMN20220825
 momo.secretKey =  WMhq6fyEsIJXYQHTNtohhzhCRLv2ODep
 momo.partnerName = ecommerce
 momo.storeId = ecommerce2512
-momo.redirectUrl = https://jsoneditoronline.org/
+momo.redirectUrl = http://localhost:8080/ou-ecommerce/swagger-ui.html
 momo.ipnUrl = http://momo.vn
 momo.requestType = captureWallet
+#delivery config
+ghn.token.sandbox = 8f652b1c-c59b-11ed-bc91-ba0234fcde32
+ghn.token.production = 3ba48cf5-c599-11ed-bcba-eac62dba9bd9
+ghn.shopManager.shopID = 122234
 
