Integrate API calculate the expected delivery time

--- a/ecommerceou/src/main/resources/application.properties
+++ b/ecommerceou/src/main/resources/application.properties
@@ -73,4 +73,5 @@ momo.requestType = captureWallet
 ghn.token.sandbox = 8f652b1c-c59b-11ed-bc91-ba0234fcde32
 ghn.token.production = 3ba48cf5-c599-11ed-bcba-eac62dba9bd9
 ghn.shopManager.shopID = 122234
+ghn.shopManager.required_note = CHOXEMHANGKHONGTHU
 
