--- a/ecommerceou/src/main/resources/application.properties
+++ b/ecommerceou/src/main/resources/application.properties
@@ -37,6 +37,7 @@ config.mail.host=smtp.gmail.com
 config.mail.port=587
 config.mail.username=ou.ecommerce.manager@gmail.com
 config.mail.password=myywzemaylnenaki
+config.mail.disableSendMail = 0
 
 #upload config
 spring.servlet.multipart.max-file-size=20MB
@@ -78,7 +79,7 @@ momo.requestType = captureWallet
 #delivery config
 ghn.token.sandbox = 8f652b1c-c59b-11ed-bc91-ba0234fcde32
 ghn.token.production = 3ba48cf5-c599-11ed-bcba-eac62dba9bd9
-ghn.shopManager.shopID = 122237
+ghn.shopManager.shopID = 122235
 ghn.shopManager.required_note = CHOXEMHANGKHONGTHU
 ghn.printOrder.a5 = https://dev-online-gateway.ghn.vn/a5/public-api/printA5?token=
 ghn.printOrder.80x80 = https://dev-online-gateway.ghn.vn/a5/public-api/print80x80?token=
