--- a/ecommerceou/src/main/resources/application.properties
+++ b/ecommerceou/src/main/resources/application.properties
@@ -84,3 +84,8 @@ ghn.shopManager.required_note = CHOXEMHANGKHONGTHU
 ghn.printOrder.a5 = https://dev-online-gateway.ghn.vn/a5/public-api/printA5?token=
 ghn.printOrder.80x80 = https://dev-online-gateway.ghn.vn/a5/public-api/print80x80?token=
 ghn.printOrder.52x70 = https://dev-online-gateway.ghn.vn/a5/public-api/print52x70?token=
+
+#twilio send sms
+twilio.account_sid = ACff71b9b084eef615b1b0ac84ec3aaa00
+twilio.auth_token = 530ea43e78f2d5c548f390751a64d937
+twilio.phone_number = +15855802819 
