config real-time notify using firebase

--- a/ecommerceou/pom.xml
+++ b/ecommerceou/pom.xml
@@ -156,6 +156,16 @@
 			<artifactId>twilio</artifactId>
 			<version>7.20.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>21.0</version>
+		</dependency>
     </dependencies>
 
 	<build>
